# plumber

./: .gitignore  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Cargo.toml
apps/api/examples/: print_dev_seed_password_hash.rs
apps/api/migrations/: 20250410180000_users.up.sql  20250411120000_registration_split.down.sql  20250411120000_registration_split.up.sql  20250412100000_refresh_tokens.up.sql  20260210120000_phase2_domain_enums.down.sql  20260210120000_phase2_domain_enums.up.sql  20260210120001_users_user_status.down.sql  20260210120001_users_user_status.up.sql  20260210120002_plumber_profiles_surrogate_id.down.sql  20260210120002_plumber_profiles_surrogate_id.up.sql  20260210120003_geography_reference_tables.down.sql  20260210120003_geography_reference_tables.up.sql  20260210120004_client_profiles.down.sql  20260210120004_client_profiles.up.sql  20260210120005_plumber_profiles_dispatch_columns.down.sql  20260210120005_plumber_profiles_dispatch_columns.up.sql  20260210120006_service_categories.down.sql  20260210120006_service_categories.up.sql  20260210120007_service_price_guides.down.sql  20260210120007_service_price_guides.up.sql  20260210120008_plumber_services.down.sql  20260210120008_plumber_services.up.sql  20260210120009_plumber_service_areas.down.sql  20260210120009_plumber_service_areas.up.sql  20260210120010_plumber_status_history.down.sql  20260210120010_plumber_status_history.up.sql  20260210120011_orders.up.sql  20260210120012_order_dispatches.down.sql  20260210120012_order_dispatches.up.sql  20260210120013_admin_audit_logs.up.sql  (+5 more)
(+270 files in other folders)
