[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
dotenvy = "0.15"
hex = "0.4"
hmac = { version = "0.12", features = ["reset"] }
jsonwebtoken = "9"
sha2 = "0.10"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "tls-native-tls",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
